BUG FIX: search content overflow fixed , UPDATED : Payment page , Premium Page , Explore page

--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -251,7 +251,7 @@ body{
     width:100%;
     display: flex;
     /* gap:2%; */
-    margin-top: 5%;
+    margin-top: 15%;
     margin-bottom: 10%;
     /* border-bottom: .1px solid rgba(245, 245, 245, 0.135); */
 
